
Clear saved password field 6.x-1.2
----------------------------------
#952848 by kika: Clear both passwords in profile edit form.

Clear saved password field 6.x-1.1
----------------------------------
#908394 by nevets and vstmusic: Add support for login forms.
#910886 by opi: Add support for Chromium-based web browsers.

Clear saved password field 6.x-1.0
----------------------------------
Initial release.