@@ -1,3 +1,5 @@
 name = Clear Password Field
 description = Clear saved browser passwords from the password field in the user edit form.
-core = 6.x
+core = 7.x
+configure = admin/config/people/accounts
+files[] = clear_password_field.module
