@@ -1,7 +1,7 @@
 <?php
 
 /**
- * Implementation of hook_menu().
+ * Implements hook_menu().
  */
 function clear_password_field_form_user_admin_settings_alter(&$form, &$form_state) {
   $form['clear_password_field'] = array(
@@ -31,7 +31,7 @@ function clear_password_field_form_user_admin_settings_alter(&$form, &$form_stat
 }
 
 /**
- * Implementation of hook_form_FORM_ID_alter() for user_profile_form.
+ * Implements hook_form_FORM_ID_alter() for user_profile_form.
  */
 function clear_password_field_form_user_profile_form_alter(&$form, &$form_state) {
   if (variable_get('clear_password_field', 1) == 1) {
@@ -40,16 +40,16 @@ function clear_password_field_form_user_profile_form_alter(&$form, &$form_state)
 }
 
 /**
- * Implementation of hook_form_FORM_ID_alter() for user_register.
+ * Implements hook_form_FORM_ID_alter() for user_register.
  */
-function clear_password_field_form_user_register_alter(&$form, &$form_state) {
+function clear_password_field_form_user_register_form_alter(&$form, &$form_state) {
   if (variable_get('clear_password_field', 1) == 1) {
     drupal_add_js(drupal_get_path('module', 'clear_password_field') . '/clear_password_field_register.js');
   }
 }
 
 /**
- * Implementation of hook_form_FORM_ID_alter() for user_login.
+ * Implements hook_form_FORM_ID_alter() for user_login.
  */
 function clear_password_field_form_user_login_alter(&$form, &$form_state) {
   if (variable_get('clear_password_field_login', 0) == 1) {
@@ -58,7 +58,7 @@ function clear_password_field_form_user_login_alter(&$form, &$form_state) {
 }
 
 /**
- * Implementation of hook_form_FORM_ID_alter() for user_login_block.
+ * Implements hook_form_FORM_ID_alter() for user_login_block.
  */
 function clear_password_field_form_user_login_block_alter(&$form, &$form_state) {
   if (variable_get('clear_password_field_login', 0) == 1) {
