@@ -1,7 +1,8 @@
 
-if (Drupal.jsEnabled) {
+(function ($) {
   $(document).ready(function() {
+    $('#edit-current-pass').attr('autocomplete', 'OFF').val('');
     $('#edit-pass-pass1').attr('autocomplete', 'OFF').val('');
     $('#edit-pass-pass2').attr('autocomplete', 'OFF').val('');
   });
-}
+})(jQuery);
