@@ -1,7 +1,7 @@
 
-if (Drupal.jsEnabled) {
+(function ($) {
   $(document).ready(function() {
     $('#edit-name').attr('autocomplete', 'OFF').val('');
     $('#edit-pass').attr('autocomplete', 'OFF').val('');
   });
-}
+})(jQuery);
